--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="kartu-profil">
-<img src="Acer_Wallpaper_05_3840x2400.jpg, " alt="Foto profil saya">
+<img src="Acer_Wallpaper_05_3840x2400.jpg" alt="Foto profil saya">
 <h1>Nama Lengkap Anda</h1>
 <p>Siswa SMA yang tertarik dengan teknologi dan desain.
 Selamat datang di website pertama saya!</p>
