--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
 Selamat datang di website pertama saya!</p>
     <a
 href="httpa://www.com/usernamed">Kunjungi Instagram Saya</a>
+  <!-- konten yang terlihat pengunjung akan ada di sini-->
 <button id="sapa nadine">Sapa nadine!</button>
-</body>
-</html>
-    <!-- konten yang terlihat pengunjung akan ada di sini-->
-</div>
 
+</div>
+<script src="script.js"></script>
 </body>
 </html>
